# app/Http/Controllers/API/BookController.php
@@ -9,17 +9,20 @@ use Symfony\Component\HttpKernel\Exception\HttpException;
 use App\Models\Book;
 use OpenApi\Annotations as OA;
 
+
 /**
- * Class Controller,
+ * Class BookController,
  * 
- * @author Victorio Putra Saritan<victorio.422023022@civitas.ukrida.ac.id>
+ * @author Victorio <victorio.422023022@civitas.ukrida.ac.id>
  */
+
 class BookController extends Controller
 {
+
     /** 
      * @OA\Get(
-     *     path="/api/books",
-     *     tags={"book"},
+     *     path="/api/book",
+     *     tags={"Book"},
      *     summary="Display a listing of the items",
      *     operationId="index",
      *     @OA\Response(
@@ -37,8 +40,8 @@ class BookController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/books",
-     *     tags={"book"},
+     *     path="/api/book",
+     *     tags={"Book"},
      *     summary="Store a newly created item",
      *     operationId="store",
      *     @OA\Response(
@@ -61,7 +64,8 @@ class BookController extends Controller
      *                      "description": "Menjadi sehat adalah impian semua orang. Makanan yang selama ini kita pikir sehat ternyata belum tentu 'sehat' bagi tubuh kita.",
      *                      "price": 85000}
      *         ),
-     *     )
+     *     ),
+     *      security={{"passport_token_ready":{},"passport":{}}}
      * )
      */
 
@@ -80,15 +84,15 @@ class BookController extends Controller
             return $book;
 
         } catch(\Exception $exception) {
-            throw new HttpException(400, "Invalid Data : {&exception->getMessage}");
+            throw new HttpException(400, "Invalid Data : {$exception->getMessage()}");
         }
     }
 
 
     /**
      * @OA\Get(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/book/{id}",
+     *     tags={"Book"},
      *     summary="Display the specified item",
      *     operationId="show",
      *     @OA\Response(
@@ -130,8 +134,8 @@ class BookController extends Controller
 
     /**
      * @OA\Put(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/book/{id}",
+     *     tags={"Book"},
      *     summary="Update the specified item",
      *     operationId="update",
      *     @OA\Response(
@@ -170,10 +174,11 @@ class BookController extends Controller
      *                      "price": 85000}
      *         ),
      *     ),
+     *      security={{"passport_token_ready":{},"passport":{}}}
      * )
      */
 
-    public function update(Request $request, $id)
+    public function update(Request $request, string $id)
     {
         $book = Book::find($id);
         if(!$book){
@@ -192,14 +197,14 @@ class BookController extends Controller
            return response()->json(array('message'=>'Updated successfully'), 200);
 
         } catch(\Exception $exception) {
-            throw new HttpException(400, "Invalid Data : {&exception->getMessage(}");
+            throw new HttpException(400, "Invalid Data : {$exception->getMessage()}");
         }
     }
 
     /**
      * @OA\Delete(
-     *     path="/api/books/{id}",
-     *     tags={"book"},
+     *     path="/api/book/{id}",
+     *     tags={"Book"},
      *     summary="Remove the specified item",
      *     operationId="destroy",
      *     @OA\Response(
@@ -227,10 +232,11 @@ class BookController extends Controller
      *             format="int64"
      *         )
      *     ),
+     *      security={{"passport_token_ready":{},"passport":{}}}
      * )
      */
     
-    public function destroy($id)
+    public function destroy(string $id)
     {
         $book = Book::find($id);
         if(!$book){
